Khan margins corrected and video iframes overflow to next segment

--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -1,42 +1,74 @@
 .khan {
   background-color: #f2f2f2;
-  
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;  
+}
+
+.khan__container {
+  width: 80%;
+  margin-top: 105px;
 }
 
 .khan__author {
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
+  margin-top: 0px;
+  margin-bottom: 0;
 }
 
 .khan__title {
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
+  margin-top: 0px;
+  margin-bottom: 50px;
 }
 
 .khan__quote {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin-top: 0px;
+  margin-bottom: 36px;
 }
 
 .khan__quote-author {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .khan__quote-author-subline {
   line-height: 1.15;
   font-size: 24px;
   font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 68px;
+}
+
+.khan__book-container {
+  display: flex;
+  overflow: hidden;
+  margin-bottom:-330px;
+}
+
+.khan__book-pic {
+  min-height: 620px;
+  width: 608px;
+  padding-right: 48px;
 }
 
 .khan__buy-link {
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 
