--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  overflow: visible;
+  margin-bottom:-40px;
 }
 
 .video__iframes {
